fixed z-index of svg after login

--- a/src/app/component/search/search.component.scss
+++ b/src/app/component/search/search.component.scss
@@ -5,7 +5,7 @@
   position: fixed;
   width: 400px;
   z-index: 12;
-  background-color: var(--background-color);
+  background-color: transparent;
   height: 70px;
   padding-bottom: 10px;
 }
