--- a/src/app/page/dashboard-layout/dashboard-layout.component.scss
+++ b/src/app/page/dashboard-layout/dashboard-layout.component.scss
@@ -1,6 +1,10 @@
 @use '../../../styles/util/util';
 @use '../../../styles/page/page';
 
+.wrapper {
+  background-color: var(--background-color);
+}
+
 .page-content {
   padding: 0 2rem 2em;
 }
